--- a/Projecten/Mijn eigen website/nieuw ontwerp 2.0/styles/style.css
+++ b/Projecten/Mijn eigen website/nieuw ontwerp 2.0/styles/style.css
@@ -13,7 +13,9 @@
 header {
     width: 475px;
     height: 80px;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 12px;
     
     background-color: aquamarine;
     
@@ -28,7 +30,9 @@ nav {
 
     width: 350px;
     height: 30px;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 12px;
     padding-top: 6px;
 
     background-color: rgb(255, 255, 160);
@@ -41,7 +45,9 @@ nav {
 main {
     width: 350px;
     height: 630px;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 12px;
     padding-top: 3px;
 
     background-color: rgb(255, 255, 160);
@@ -63,7 +69,9 @@ footer {
     left: 0px;
 
     width: 475px;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 5px;
 
     background-color: aquamarine;
 
